fix some mobile v. desktop layout issues and some handlebars helpers

--- a/client/css/app/activities.css
+++ b/client/css/app/activities.css
@@ -7,7 +7,7 @@
 }
 
 .activities-map img {
-    margin-top: 20px;
+    margin: 20px 0 10px 0;
 }
 
 .activity-map {
