--- a/client/css/app/common.css
+++ b/client/css/app/common.css
@@ -4,7 +4,7 @@
 }
 
 .columns.action a {
-  font-size: 0.9em;
+  font-size: 0.95em;
   height: 34px;
   line-height: 33px;
   padding: 0;
@@ -31,16 +31,29 @@
   box-shadow: 0 12px 0 1px rgba(0,0,0,0.3), 0 17px 0 1px rgba(0,0,0,0.3), 0 22px 0 1px rgba(0,0,0,0.3);
 }
 
-@media only screen and (min-width: 48em) {
-  .columns.action {
-    padding-top: 5px;
-  }
-}
-
 .columns.new-short {
   text-indent: -38px;
 }
 
 .columns.new-comment a {
-  text-indent: -105px;
+  text-indent: -110px;
 }
+
+@media only screen and (min-width: 48em) {
+  .columns.action a {
+    font-size: 0.9em;
+  }
+  
+  .columns.action {
+    padding-top: 5px;
+  }
+
+  .columns.new-short {
+    text-indent: -38px;
+  }
+
+  .columns.new-comment a {
+    text-indent: -105px;
+  }
+}
+
