--- a/client/css/foundation-overrides.css
+++ b/client/css/foundation-overrides.css
@@ -1,3 +1,9 @@
+.top-bar .name h1 a {
+  font-weight: normal;
+  padding: 0 5px;
+  font-size: 1.3em;
+}
+
 .title-area h1 {
   color: white;
   padding: 0 10px 0 10px;
