--- a/client/css/main.css
+++ b/client/css/main.css
@@ -5,6 +5,10 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5 {
+    font-weight: normal;
+}
+
 .no-side-padding {
     padding-left: 0px !important;
     padding-right: 0px !important;
